# notion-opds

./: .gitignore  README.md  pyproject.toml  requirements.txt
notion_opds/: app.py  notion.py
